Fix sidebars on smaller screens

--- a/develop/all/theme/assets/_partials/_misc.scss
+++ b/develop/all/theme/assets/_partials/_misc.scss
@@ -78,6 +78,10 @@
 }
 
 @media screen and (max-width : 940px) {
+	.sitemaker {
+		position: relative;
+	}
+
 	.sm-responsive-show {
 		display: block;
 	}
